shoulda committed these last night

--- a/hons/docs/txSymbols.tex
+++ b/hons/docs/txSymbols.tex
@@ -11,7 +11,7 @@
 %A solution to the MTC problem.
 \newcommand{\mSolution}{S}
 %The function for determining the cost of a solution #1 to the MTC problem.
-\newcommand{\mCost}[1]{C(#1)}
+\newcommand{\mCost}{C}
 %The feasible solution space for the MTC problem.
 \newcommand{\mFeasible}{F}
 %The optimal solution space for the MTC problem.
@@ -20,13 +20,13 @@
 %A solution to the RAAP problem.
 \newcommand{\rSolution}{\alpha}
 %The function for determining the cost of a solution #1 to the RAAP problem.
-\newcommand{\rCost}[1]{C'(#1)}
+\newcommand{\rCost}{C'}
 %The feasible solution space for the RAAP problem.
 \newcommand{\rFeasible}{F'}
 %The optimal solution space for the RAAP problem.
 \newcommand{\rOptimal}{O'}
 
 %The function for retreiving the solution for the MTC problem from its mapped RAAP version's solution #1.
-\newcommand{\reverse}[1]{\gamma(#1)}
+\newcommand{\reverse}{\gamma}
 %The function for inserting the solution #1 to an MTC problem into its mapped RAAP version's solution.
-\newcommand{\inverse}[1]{\gamma'(#1)}
+\newcommand{\inverse}{\gamma'}
