--- a/hons/docs/tHardness.tex
+++ b/hons/docs/tHardness.tex
@@ -1,2 +1,386 @@
 \section{NP-Hardness}
-This is not in the model section why?
+
+\subsection{RAAP and MTC}
+
+\begin{definition}
+Graph $G$
+\begin{align}
+	\nonumber G = & (V,E) \\
+	\nonumber V = & \{v_1, v_2, ..., v_n\} \quad & (vertices)\\
+	\nonumber E \subseteq & V^2 & (edges)
+\end{align}
+
+We shall deal exclusively with so-called ``undirected'' graphs, in which $\forall (u,v) \in E : (u,v) = (v,u)$.
+
+Note: if $V' \subset V \vee E' \subset E$ then we may call the graph $G'=(V',E')$ a \emph{subgraph} of $G=(V,E)$.
+\end{definition}
+
+\begin{definition}
+Path Predicate.
+
+This predicate $\pi$ is true in the following cases:
+
+\begin{align}
+	\nonumber \forall (u,v) \in V^2 : \pi(u, v) \Leftrightarrow & ( (u, v) \in E \\
+	\nonumber & \vee \langle \exists w \in V : \pi(u, w) \wedge (w, v) \in E \rangle \\
+	\nonumber & \vee u = v )
+\end{align}
+
+Note also then that:
+
+\begin{align}
+	\nonumber \exists w \in V : \pi(u, w) \wedge \pi(w, v) \Rightarrow \pi(u, v)
+\end{align}
+
+For simplicity we shall use $\neg\pi(u, v)$ when the predicate does not hold.
+
+For clarity we may say $\pi_{(V,E)}$ to explicitly state that this predicate applies to the graph $G=(V,E)$.
+
+\end{definition}
+
+\begin{definition}
+{\em Multi-Terminal Cut}
+
+Given a graph $G=(V,E,w,T)$, a set $T=\{t_1, t_2, ..., t_k\}$ of $k$ specified vertices or {\em terminals} : $T \subseteq V$, and a positive weight $w(e)$ for each edge, find a minimum weight set of edges $E' \subseteq E$ such that the removal of $E'$ from $E$ disconnects each terminal from all others.
+An instance of MTC is therefore defined formally:
+
+\begin{align}
+	\nonumber MTC = & (V,E,w,T)\\
+	\nonumber & E \subseteq V^2\\
+	\nonumber & w : E \rightarrow \mathbb{Z}^+\\
+	\nonumber & T \subseteq V
+\end{align}
+
+Solution Space: $2^E$
+
+Solution Cost: $C : 2^E \rightarrow \mathbb{Z}^+$
+\begin{align}
+	\nonumber C(S) = \displaystyle\sum\limits_{(u,v) \in S} w(u,v)
+\end{align}
+
+Feasible Solution Space: $F \subseteq 2^E$
+\begin{align}
+	\nonumber \forall S \in F : \forall (s, t) \in T^2 \setminus \{(r, r) | r \in T\} : \neg\pi_{(V, E \setminus S)}(s, t)
+\end{align}
+
+Optimal Solution Space: $O \subseteq F$
+\begin{align}
+	\forall S_o \in O : \forall S_f \in F : \nonumber C(S_o) \leq C(S_f)
+\end{align}
+
+\end{definition}
+
+\begin{definition}
+The {\em residual graph} ($G_r$) is a subgraph of $MTC(V,E,w,T)$ with some subset of edges $S \subseteq E$ removed:
+
+$G_r = (V, E \setminus S, w, T)$
+\end{definition}
+
+\begin{definition}
+{\em Robust Actor Allocation}
+
+Given a graph $G=(V,E,w_c,w_i, P, A)$, a partitioning of $V$ into $k$ subsets and a set of processors $P$, where $w_c : E \rightarrow \mathbb{Z}^+$ and $w_i : V \times P \rightarrow \mathbb{Z}^+$, find a mapping $\alpha : V \rightarrow P$ such that:
+$\displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \alpha(v))$ is minimised and no actors in the same partition are assigned to the same processor.
+
+\begin{align}
+	\nonumber RAAP = & (V,E,w_c, w_i, P, A)\\
+	\nonumber & E \subseteq V^2\\
+	\nonumber & w_c : E \rightarrow \mathbb{Z}^+\\
+	\nonumber & w_i : V \times P \rightarrow \mathbb{Z}^+\\
+	\nonumber & P = \{p_1, p_2, ...p_p\} \\
+	\nonumber & A \subseteq 2^V \quad s.t. : \displaystyle\bigcup\limits_{S \in A} S = V \wedge \langle \forall S_1, S_2 \in A : S_1 \neq S_2 \Rightarrow S_1 \cap S_2 = \emptyset \rangle
+\end{align}
+
+Solution Space: $\rSolution \in P^V$
+
+Solution Cost: $\rCost : P^V \rightarrow \mathbb{Z}^+$
+\begin{align}
+	\nonumber \rCost(\rSolution) = \displaystyle\sum\limits_{(u,v) \in E : \alpha(u) \neq \alpha(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V} w_i(v, \alpha(v))
+\end{align}
+
+Feasible Solution Space: $\rSolution \in \rFeasible \subseteq P^V$
+\begin{align}
+	\nonumber \rCost(\alpha) & \neq \infty \quad \mbox{We use $\infty$ as a placeholder for a very large integer} \\
+	\nonumber \forall A_i \in A : \forall u , v \in A_i : u \neq v \Rightarrow \alpha(u) & \neq  \alpha(v)
+\end{align}
+
+Optimal Solution Space: $\rSolution \in \rOptimal \subseteq \rFeasible$
+\begin{align}
+	\nonumber 	\forall \rSolution_o \in \rOptimal : \forall \rSolution_f \in \rFeasible : \rCost(\rSolution_o) \leq \rCost(\rSolution_f)
+\end{align}
+
+\end{definition}
+
+\subsection{Mapping}
+
+\begin{definition}
+Mapping
+
+For convenience we shall call the feasible and optimal solution spaces and cost for the RAAP side of the mapping $F'$, $O'$ and $C'$ respectively.
+
+\begin{align}
+	\nonumber I \in & MTC(V,E,w,T) &\\
+	\nonumber I' \in & RAAP(V', E', w_c, w_i, P, A) &\\
+	\nonumber & I \mapsto I' if: &\\
+	\nonumber V' & = V\\
+	\nonumber E' & = E\\
+	\nonumber P & = T\\
+	\nonumber w_c & = w\\
+	\nonumber w_i(v,p) & = \mbox{$\left\{ 
+		\begin{array}{l l}
+			0 \quad & \mbox{if $v \not\in T$}\\
+			0 & \mbox{if $v \in T$ and $p = v$}\\
+			\infty & \mbox{otherwise}\\ \end{array} \right.$} \\
+	\nonumber A & = \{\{v\} | v \in V\}
+\end{align}
+
+We have used ``$=$'' to keep future descriptions simple, where we really mean:
+\begin{align}
+	\nonumber \langle \exists f : V \rightarrow V' \quad s.t. & \\
+	\nonumber & V' = \{f(v) | v \in V\} \\
+	\nonumber & E' = \{(f(u), f(v)) | (u,v) \in E\} \\
+	\nonumber & P = \{f(t) | t \in T\} \\
+	\nonumber & \forall (u, v) \in E : w_c(f(u), f(v)) = w(u, v) \rangle
+\end{align}
+
+The above mapping makes $A$ consist of singletons of vertices, which makes it impossible to violate feasibility.
+When talking about mapped instances we may therefore ignore it.
+\end{definition}
+
+\subsection{Feasibility of the Mapping}
+
+\begin{definition}
+Reversal Function $\gamma$
+
+\begin{align}
+	\nonumber \reverse & : P^V \rightarrow 2^E \\
+	\nonumber \reverse(\rSolution) & = \{(u,v) \in E | \alpha(u) \neq \alpha(v)\}
+\end{align}
+\end{definition}
+
+\begin{lemma}
+\label{EDGEASSIGN}
+The 2 nodes at the endpoint of any edge in the residual graph were assigned to the same processor:
+
+\begin{align}
+	\nonumber \forall(u, v) \in E \setminus \gamma(\alpha) : \alpha(u) = \alpha(v)
+\end{align}
+\end{lemma}
+\begin{proof}
+Immediate by definition of $\gamma$.
+\end{proof}
+
+\begin{lemma}
+\label{PATHASSIGN}
+The two nodes for which the path predicate is true in the residual graph were assigned to the same processor:
+
+\begin{align}
+	\nonumber \forall (u, v) \in V^2 : \pi_{(V, E \setminus \gamma(\alpha))}(u,v) \Rightarrow \alpha(u) = \alpha(v)
+\end{align}
+\end{lemma}
+\begin{proof}
+Using \ref{EDGEASSIGN} and induction on the path predicate.
+
+In the trivial cases:
+\begin{align}
+	\nonumber \forall v \in V : \pi(v, v) & \Rightarrow \alpha(v) = \alpha(v) \\
+	\nonumber \forall (u, v) \in E \setminus \gamma(\alpha) : \pi(u, v) & \Rightarrow \alpha(u) = \alpha(v) \quad \mbox{From \ref{EDGEASSIGN}}
+\end{align}
+
+Otherwise:
+\begin{align}
+	\nonumber \forall (u, v) \in V^2 : \pi(u, v) \Rightarrow \exists w \in V : \pi(u, w) \wedge (w, v) \in E \setminus \gamma(\alpha)
+\end{align}
+
+Clearly by \ref{EDGEASSIGN} $\alpha(w) = \alpha(v)$ and the definition recurs backwards until it is satisfied by one of the trivial cases.
+
+\end{proof}
+
+\begin{lemma}
+\label{FORCEASSIGN}
+Any feasible assignment $\alpha$ maps all terminals to themselves:
+
+\begin{align}
+	\nonumber \forall \alpha \in F' : \forall t \in T : \alpha(t) = t
+\end{align}
+\end{lemma}
+\begin{proof}
+Immediate by the definition of the mapping.
+Otherwise $\rCost(\rSolution) = \infty$ and therefore $\rSolution \not\in \rFeasible$.
+\end{proof}
+
+\begin{lemma}
+\label{REVERSEFEASABLE}
+The reverse solution for any feasible $\alpha$ is also a feasible $S$.
+
+\begin{align}
+	\nonumber \forall \alpha \in F' : \gamma(\alpha) \in F
+\end{align}
+\end{lemma}
+\begin{proof}
+In other words, we must show that $\forall s, t \in T : s \neq t \Rightarrow \npath{(V, E \setminus \gamma(\alpha))}{s}{t}$.
+
+To prove this by contradiction let us presume $\exists \beta \in F' : \gamma(\beta) \not\in F$.
+Therefore $\exists (s, t) \in T^2 \setminus \{(r,r) | r \in T\} : \pi_{(V, E \setminus \gamma(\alpha))}(s, t)$.
+
+First from \ref{FORCEASSIGN}:
+\begin{align}
+	\nonumber \mbox{since } \beta(s) = s \mbox{ and } \beta(t) = t \\
+	\nonumber s \neq t \Rightarrow \beta(s) \neq \beta(t)
+\end{align}
+
+Second from \ref{PATHASSIGN}:
+\begin{align}
+	\nonumber \forall (u, v) \in V^2 : \pi_{(V, E \setminus \gamma(\alpha))}(u,v) & \Rightarrow \alpha(u) = \alpha(v) \\
+	\nonumber \pi(s, t) & \Rightarrow \beta(s) = \beta(t)
+\end{align}
+
+But this is a contradiction.
+\end{proof}
+
+\subsection{Optimality of the mapping}
+
+We need to show that the mapping allows us to solve the MTC problem optimally if we can solve the RAAP mapped instance optimally.
+To do this we must show that all reversed optimal RAAP solutions are also optimal MTC solutions.
+
+We intuit a surjection on the reversal function.
+If we were to name processors in the assignment, we can have a different assignment by switching the names of 2 processors that would yield the same reversed solution.
+This intuition brings us to look at a way of retreiving at least one $\rSolution$ from a given $\mSolution$ and working with that.
+
+We do this using the so called ``inversion function'' $\inverse$, which has some useful properties.
+Most importantly we can say something about the cost of inverted solutions which we use to prove the optimality proposition.
+
+\begin{definition}
+Inversion Function $\inverse$
+
+\begin{align}
+	\nonumber \inverse & : 2^E \rightarrow P^V \\
+	\nonumber \inverse(S) & = \rSolution \mbox{ where } \forall v \in V' \alpha(v) = \mbox{$\left\{ 
+		\begin{array}{l l}
+			t \quad & \mbox{if $t \in T \wedge \path{(V,E \setminus S)}{v}{t}$}\\
+			t_0 & \mbox{for some $t_o \in T$ otherwise}\\ \end{array} \right.$} 
+\end{align}
+
+The choice of $t_0$ is arbitrary and, as we shall see, irrelevant.
+We simply choose it to be able to assign vertices $v \in V'$ for which $\forall t \in T : \npath{}{v}{t}$.
+\end{definition}
+
+\begin{lemma}
+\label{INVERSESUBSET}
+Any edge in the inversion of a feasible solution to a multiterminal cut with endpoints assigned to different processors had to be in the solution.
+
+\begin{align}
+	\nonumber & \forall (u, v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v) \Rightarrow (u,v) \in S \\
+	\nonumber \mbox{or} &\\
+	\nonumber & \forall S \in F : \{(u,v) | \gamma'(S)(u) \neq \gamma'(S)(v)\} \subseteq S
+\end{align}
+\end{lemma}
+\begin{proof}
+To prove this by contradiction we must show that there is no edge with differently assigned endpoints that is not in the solution.
+Assume $\exists (u,v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v) \wedge (u,v) \not\in S$.
+
+Neither or one of $u$ or $v$ may have the arbitrailty chosen assignment $t_0$, all others have an assignment to $\gamma'(S)(v) = t$ if $\pi_{(V, E \setminus S)}(v, t)$.
+
+Let us say that $\gamma'(S)(u) = t_0$:
+\begin{align}
+	\nonumber \exists s \in T \setminus \{t_0\} & : \pi(v, s) \\
+	\nonumber & \Rightarrow \pi(u, s) \\
+	\nonumber & \Rightarrow \gamma'(S)(u) = s \neq t_0
+\end{align}
+
+The definition of the inversion function procludes that assignment.
+A similar problem arises in the case where neither endpoint is assigned to the arbitrary $t_0$.
+\begin{align}
+	\nonumber \exists s \neq t \in T  & : \pi(u, s) \wedge \pi(v, t) \\
+	\nonumber \exists (u, v) \in E & \\
+	\nonumber & \Rightarrow \pi(u, t) \wedge \pi(v, s) \\
+	\nonumber & \Rightarrow S \not\in F
+\end{align}
+
+Then that assignment would mean $S$ was infeasible.
+Hence the contradicting assumption cannot exist.
+\end{proof}
+
+\begin{lemma}
+\label{INVERSEFEASIBLE}
+Any feasible solution to a multiterminal cut is also a feasible solution to its inverted mapped instance:
+
+\begin{align}
+	\nonumber \forall S \in F : \gamma'(S) \in F'
+\end{align}
+\end{lemma}
+\begin{proof}
+Since the mapping allows us to ignore the partitioning constraint on feasibility we are only concerned with the cost.
+
+Immediately from the path predicate and definition of $\gamma'$ we see that $\forall t \in T : \gamma'(S)(t) = t$.
+
+\begin{align}
+	\nonumber C'(\gamma'(s)) & = \displaystyle\sum\limits_{(u,v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v)} w_c(u,v) + 0 \\
+	\nonumber C'(\gamma'(s)) & \leq \displaystyle\sum\limits_{(u,v) \in E'} w_c(u,v) \\
+	\nonumber C'(\gamma'(s)) & \neq \infty \\
+	\nonumber \gamma'(s) & \in F'
+\end{align}
+\end{proof}
+
+\begin{lemma}
+\label{INVERSECOST}
+The inverted solution to a multiterminal cut problem costs the same or less than the cut.
+
+\begin{align}
+	\nonumber \forall S \in F : C(S) \geq C'(\gamma'(S))
+\end{align}
+\end{lemma}
+\begin{proof}
+\begin{align}
+	\nonumber C(S) & = \displaystyle\sum\limits_{(u,v) \in S} w(u,v)\\
+	\nonumber C'(\gamma'(S)) & = \displaystyle\sum\limits_{(u,v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v)} w_c(u,v) + \displaystyle\sum\limits_{v \in V'} w_i(v, \gamma'(S)(v)) \\
+	\nonumber & = \displaystyle\sum\limits_{(u,v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v)} w_c(u,v) + 0 \\
+	\nonumber \mbox{And from \ref{INVERSESUBSET}} \\
+	\nonumber & \{(u,v) | (u,v) \in E' \wedge \gamma'(S)(u) \neq \gamma'(S)(v)\} \subseteq S \\
+	\nonumber & \Rightarrow \displaystyle\sum\limits_{(u,v) \in S} w(u,v) \geq \displaystyle\sum\limits_{(u,v) \in E' : \gamma'(S)(u) \neq \gamma'(S)(v)} w_c(u,v) \\
+	\nonumber & \Rightarrow C(S) \geq C'(\gamma'(S))
+\end{align}
+\end{proof}
+
+\begin{lemma}
+\label{REVERSECOST}
+The solution to the RAAP instance of a mapped MTC problem costs the same as the reverse solution.
+
+\begin{align}
+	\nonumber \forall \alpha \in F' : C'(\alpha) = C(\gamma(\alpha))
+\end{align}
+\end{lemma}
+\begin{proof}
+Immediately by the definitions of the mapping, $\gamma$ and lemma \ref{FORCEASSIGN}.
+
+From \ref{FORCEASSIGN} we know $\forall t \in T : \rSolution(t) = t$ hence $\displaystyle\sum\limits_{v \in V'} w_i(v, \rSolution(v)) = 0$.
+
+Then:
+\begin{align}
+	\nonumber \rCost(\rSolution) & = \displaystyle\sum\limits_{(u,v) \in E' : \alpha(u) \neq \alpha(v)} w_c(u,v) + 0 \\
+	\nonumber \mCost(\reverse(\rSolution)) & = \displaystyle\sum\limits_{(u,v) \in E' : \alpha(u) \neq \alpha(v)} w(u,v) \\
+	\nonumber \rCost(\rSolution) & = \mCost(\reverse(\rSolution))
+\end{align}
+\end{proof}
+
+\begin{lemma}
+\label{REVERSEOPTIMAL}
+Any optimal solution to RAAP can be reversed to give an optimal solution to MTC.
+
+\begin{align}
+	\nonumber \forall \alpha \in O' : \gamma(\alpha) \in O
+\end{align}
+\end{lemma}
+\begin{proof}
+This uses a contradiction that would arise otherwise because of lemmas \ref{INVERSEFEASIBLE}, \ref{REVERSECOST} and \ref{INVERSECOST}.
+\begin{align}
+	\nonumber \mbox{Assume:} \quad & \exists \alpha \in O' : \gamma(\alpha) \not\in O \\
+	\nonumber & \Rightarrow \exists S \in F : C(S) < C(\gamma(\alpha)) \quad \mbox{Definition of optimal space} \\
+	\nonumber & \Rightarrow \forall \beta \in F' : C'(\alpha) \leq C'(\beta) \\
+	\nonumber \\
+	\nonumber & \gamma'(S) \in F' \\
+	\nonumber & C'(\gamma'(S)) \leq C(S) < C(\gamma(\alpha)) = C'(\alpha) \\
+	\nonumber & \Rightarrow C'(\gamma'(S)) < C'(\alpha) \\
+	\nonumber & \Rightarrow \alpha \not\in O'
+\end{align}
+\end{proof}
