added a biblio ref

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -60,6 +60,15 @@
   publisher={RAND Corporation}
 }
 
+%First of andrew's papers
+@inproceedings{ged08,
+  title={SPADE: the system s declarative stream processing engine},
+  author={Gedik, B. and Andrade, H. and Wu, K.L. and Yu, P.S. and Doo, M.},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={1123--1134},
+  year={2008},
+  organization={ACM}
+}
 
 @ONLINE{glpk,
   author = {Makhorin, Andrew},
