--- a/hons/docs/tExample.tex
+++ b/hons/docs/tExample.tex
@@ -1,2 +1,2 @@
-\section{Working Example}
+\chapter{Working Example}
 Is this meant to be a running thing for the thesis or like a motivating type thing?
