--- a/hons/docs/tHardness.tex
+++ b/hons/docs/tHardness.tex
@@ -1,6 +1,6 @@
-\section{NP-Hardness}
+\chapter{NP-Hardness}
 
-\subsection{RAAP and MTC}
+\section{RAAP and MTC}
 
 \begin{definition}
 Graph $G$
@@ -111,7 +111,7 @@ Optimal Solution Space: $\rSolution \in \rOptimal \subseteq \rFeasible$
 
 \end{definition}
 
-\subsection{Mapping}
+\section{Mapping}
 
 \begin{definition}
 Mapping
@@ -147,7 +147,7 @@ The above mapping makes $A$ consist of singletons of vertices, which makes it im
 When talking about mapped instances we may therefore ignore it.
 \end{definition}
 
-\subsection{Feasibility of the Mapping}
+\section{Feasibility of the Mapping}
 
 \begin{definition}
 Reversal Function $\gamma$
@@ -238,7 +238,7 @@ Second from \ref{PATHASSIGN}:
 But this is a contradiction.
 \end{proof}
 
-\subsection{Optimality of the mapping}
+\section{Optimality of the mapping}
 
 We need to show that the mapping allows us to solve the MTC problem optimally if we can solve the RAAP mapped instance optimally.
 To do this we must show that all reversed optimal RAAP solutions are also optimal MTC solutions.
