--- a/hons/docs/tModel.tex
+++ b/hons/docs/tModel.tex
@@ -1,6 +1,6 @@
-\section{Mathematical Model}
+\chapter{Mathematical Model}
 
-\subsection{Checkpoint Recomputation}
+\section{Checkpoint Recomputation}
 The checkpoint recomputation (CR) method keeps a checkpoint for the last successful execution's state.
 When a steady-state schedule is completed correctly the checkpoint is updated.
 If it fails the system can return to the last successful state and continue.
