--- a/hons/docs/tRelated.tex
+++ b/hons/docs/tRelated.tex
@@ -1,6 +1,6 @@
-\section{Related work}
+\chapter{Related work}
 
-\subsection{SDF and Parallel Paradigms}
+\section{SDF and Parallel Paradigms}
 
 The Synchronous Dataflow (SDF) paradigm builds on the more general computation graphs described in \cite{kar66}.
 At the time that model was only a graph-theoretical representation of parallel computation, and was more of an abstraction rather than a paradigm.
@@ -38,7 +38,7 @@ This is not a problem for the most well known massively-parallel paradigm, MapRe
 MapReduce \cite{dea08} is a popular tool for large scale data-crunching.
 Much of the work goes into distributed-memory grid/cloud systems, however implementations such as PHOENIX \cite{ran07} demonstrate the paradigm's viability for shared-memory multithreaded systems.
 
-\subsection{Fault Tolerance}
+\section{Fault Tolerance}
 
 Fault tolerance is the main focus of our work.
 The notion of fault tolerance is not new \cite{ran75}, however, it has become absolutely essential in more recent cloud and grid systems.
