--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass{report}
 
 \usepackage{graphicx}
 \usepackage{amssymb,amsmath}
@@ -14,7 +14,12 @@
 
 \maketitle
 
+\tableofcontents
+
 \input{thesis.temp}
+
+\chapter{Appendix}
+\input{symboltable}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
