--- a/hons/docs/txSymbols.tex
+++ b/hons/docs/txSymbols.tex
@@ -10,7 +10,7 @@
 
 %A solution to the MTC problem.
 \newcommand{\mSolution}{S}
-%The function for determining the cost of a solution #1 to the MTC problem.
+%The function for determining the cost of a solution to the MTC problem.
 \newcommand{\mCost}{C}
 %The feasible solution space for the MTC problem.
 \newcommand{\mFeasible}{F}
@@ -19,14 +19,14 @@
 
 %A solution to the RAAP problem.
 \newcommand{\rSolution}{\alpha}
-%The function for determining the cost of a solution #1 to the RAAP problem.
+%The function for determining the cost of a solution to the RAAP problem.
 \newcommand{\rCost}{C'}
 %The feasible solution space for the RAAP problem.
 \newcommand{\rFeasible}{F'}
 %The optimal solution space for the RAAP problem.
 \newcommand{\rOptimal}{O'}
 
-%The function for retreiving the solution for the MTC problem from its mapped RAAP version's solution #1.
+%The function for retreiving the solution for the MTC problem from its mapped RAAP version's solution.
 \newcommand{\reverse}{\gamma}
-%The function for inserting the solution #1 to an MTC problem into its mapped RAAP version's solution.
+%The function for inserting the solution to an MTC problem into its mapped RAAP version's solution.
 \newcommand{\inverse}{\gamma'}
