Should do this more often

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -213,6 +213,16 @@ keywords = "Grid computing"
   publisher={ACM}
 }
 
+%not so foreign latin
+@inproceedings{ols08,
+  title={Pig latin: a not-so-foreign language for data processing},
+  author={Olston, C. and Reed, B. and Srivastava, U. and Kumar, R. and Tomkins, A.},
+  booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
+  pages={1099--1110},
+  year={2008},
+  organization={ACM}
+}
+
 %this paper's filename bears no resemblance to its authors or content
 @article{pami01,
   title={{Fast approximate energy minimization via graph cuts}},
@@ -237,6 +247,18 @@ keywords = "Grid computing"
   title={S-Net Language Report},
   author={Penczek, F. and Grelck, C. and Cai, H. and Julku, J. and H{\\"o}lzenspies, P. and Scholz, S.B. and Shafarenko, A.},
   year={2009}
+}
+
+%sawzall, it sawz all, not to be confused with the chainsaw
+@article{pik05,
+  title={Interpreting the data: Parallel analysis with Sawzall},
+  author={Pike, R. and Dorward, S. and Griesemer, R. and Quinlan, S.},
+  journal={Scientific Programming},
+  volume={13},
+  number={4},
+  pages={277--298},
+  year={2005},
+  publisher={IOS Press}
 }
 
 @article{ran75,
@@ -320,6 +342,17 @@ keywords = "Adaptive software"
  address = {Washington, DC, USA},
 }
 
+%This just formalises streaming language grammars for purpose of verification?
+@article{sou10,
+  title={A universal calculus for stream processing languages},
+  author={Soul{\'e}, R. and Hirzel, M. and Grimm, R. and Gedik, B. and Andrade, H. and Kumar, V. and Wu, K.L.},
+  journal={Programming Languages and Systems},
+  pages={507--528},
+  year={2010},
+  publisher={Springer}
+}
+
+
 %ZZ Stabler cited by Stone
 @book{sta74,
   title={A system for interconnected processing},
@@ -337,6 +370,13 @@ keywords = "Adaptive software"
   pages={85--93},
   year={1977},
   publisher={IEEE}
+}
+
+%The compiler alone, back when streamit was in java
+@misc{thies01,
+  title={StreamIt: A compiler for streaming applications, December 2001},
+  author={Thies, W. and Karczmarek, M. and Gordon, M. and Maze, D. and Wong, J. and Ho, H. and Brown, M. and Amarasinghe, S.},
+  publisher={MIT-LCS Technical Memo TM-622, Cambridge, MA}
 }
 
 %A streamit paper, high level description of language
@@ -378,3 +418,14 @@ keywords = "Adaptive software"
  publisher = {Fall Joint Comput. Conf},
  address = {Montvale, NJ},
 }
+
+%dryadlinq is .net massively parallel compiler/optimiser
+@inproceedings{yu08,
+  title={DryadLINQ: A system for general-purpose distributed data-parallel computing using a high-level language},
+  author={Yu, Y. and Isard, M. and Fetterly, D. and Budiu, M. and Erlingsson, {\'U}. and Gunda, P.K. and Currey, J.},
+  booktitle={Proceedings of the 8th USENIX conference on Operating systems design and implementation},
+  pages={1--14},
+  year={2008},
+  organization={USENIX Association}
+}
+
